foi tanta coisa que nem me lembro

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,6 +48,7 @@ endorsed.classpath=\
 excludes=
 file.reference.Cachefilter2.jar=Cachefilter2.jar
 file.reference.commons-fileupload-1.3.2.jar=/home/sis/commons-fileupload-1.3.2.jar
+file.reference.commons-io-2.5.jar=commons-io-2.5.jar
 file.reference.javamail-141.jar=javamail-141.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=mysql-connector-java-5.1.23-bin.jar
 includes=**
@@ -67,7 +68,8 @@ javac.classpath=\
     ${file.reference.Cachefilter2.jar}:\
     ${file.reference.javamail-141.jar}:\
     ${file.reference.commons-fileupload-1.3.2.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.commons-io-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
